# Pragya_QuadB_Tech

./: .gitignore  README.md
week1/day1/: README.md
week1/day1/icp_greeting/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
week1/day1/src/declarations/icp_greeting_backend/: index.js
week1/day1/src/declarations/icp_greeting_frontend/: index.d.ts  index.js
week1/day1/src/icp_greeting_backend/: Cargo.toml
week1/day1/src/icp_greeting_frontend/: .env  package.json  vite.config.js
week2/day1/: Anchor.toml
week2/day1/hello_solana/programs/solana_test/: Cargo.toml
week2/day1/hello_solana/programs/solana_test/src/: lib.rs
week2/day1/hello_solana/tests/: solana_test.ts
week2/day2/trackr/: README.md  package-lock.json
week2/day2/trackr/anchor/: Anchor.toml
week2/day3/user_data_program/: Anchor.toml
week2/day3/user_data_program/tests/: user_data_program.ts
week2/day4/spl_token/: README.md
week3/day2/gas_fee_comparator/backend/: package-lock.json  package.json
week3/day2/gas_fee_comparator/frontend/: contractABI.json  package-lock.json  package.json
week3/day3/reentrancy-vault/: README.md  hardhat.config.js  package-lock.json  package.json
week3/day3/reentrancy-vault/contracts/: Attacker.sol  Vault.sol
week3/day3/reentrancy-vault/scripts/: deploy.js
week3/day3/reentrancy-vault/test/: vault.test.js
week4/day1/first_aptos/: Move.toml
week4/day1/first_aptos/sources/: counter.move
week4/day2/lending_dApp/move/: Move.toml
week4/day3/gas_fee_trackr/contract/: Move.toml
week4/day3/gas_fee_trackr/frontend/: package.json
(+31 files in other folders)
